# robosub-2026

./: .gitignore  COMMAND_USAGE.md  JETSON_SETUP.md  README.md  SYSTEM_OVERVIEW.md  act_center_gate.py  act_coords.py  act_forward.py  act_strafe_left.py  act_turn_left.py  auto_tune_pid.py  bt.py  bt_coinflip.py  build_engine.py  check_horizontal_direction.py  check_vertical_direction.py  convert_to_onnx.py  deploy_model.sh  depth_and_forward.py  depth_field_test.py  depth_hold.py  depth_hold_bar02_test.py  depth_hold_pix_test.py  depth_hold_test.py  diagnose_forward_veer.py  dropper.py  dropper_test.py  dropper_test_1.py  dry_test.py  field_common.py  gate_begin_assessment.py  gate_runner.py  gate_spin_pass.py  gate_task.py  mode19_depth_diagnosis.txt  motor_test.py  movement_test.py  nohup.out  package-lock.json  pixhawk_params_4.5.7_backup_2026-07-08.param  (+20 more)
.claude/: settings.json
.claude/commands/: engineer.md  tester.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: config.yml
.github/agents/: engineer.agent.md  reviewer.agent.md  tester.agent.md  ux-designer.agent.md
.github/hooks/: commit-msg  pre-commit
.github/schemas/: agent-frontmatter.schema.json  instruction-frontmatter.schema.json  pack-manifest.schema.json  plugin-manifest.schema.json  skill-frontmatter.schema.json
.github/security/: allowed-commands.json
.github/templates/: ADR-TEMPLATE.md  PRD-TEMPLATE.md  PROGRESS-TEMPLATE.md  REVIEW-TEMPLATE.md  SECURITY-PLAN-TEMPLATE.md  SPEC-TEMPLATE.md  UX-TEMPLATE.md
.github/workflows/: auto-release.yml  dependency-scanning.yml  quality-gates.yml
attic/: README.md  act_center_gate.py  act_strafe_right.py  boot_check.py  dropper.py  motor_trim.py  run_course.py  stage_gate_detect.py  submerge_forward.py  test_centering.py
autotune_logs/: auto_yaw_00.csv  auto_yaw_01.csv
docs/: CENTERING.md  robosub-audit-2026-07-12.html  robosub2026_mandatory_activities.txt  robosub2026_task_descriptions.txt  robosub2026_vehicle_operations.txt  testing-submerge-hold.md
docs/superpowers/plans/: 2026-07-12-audit-remediation.md  2026-07-13-stabilize-depth-hold-migration.md  2026-07-13-thruster-force-equalization.md  2026-07-13-true-heading-pixhawk.md  2026-07-13-zed-drift-reset-autocal.md  2026-07-13-zed-imu-orientation-viz.md  2026-07-14-heading-lock.md
docs/superpowers/specs/: 2026-07-13-zed-imu-orientation-viz-design.md  2026-07-14-heading-lock-design.md  2026-07-14-submerge-and-hold-design.md
install/: local_setup.sh  setup.ps1  setup.sh
log/: latest_build
memories/: conventions.md  decisions.md  pitfalls.md
memories/session/: progress.md
ort_env/: pyvenv.cfg
scripts/: audit-vscode-mock.ps1  check-coverage.ps1  validate-frontmatter.ps1
scripts/modules/: CIHelpers.psm1  SecurityHelpers.psm1
src/: run_stack.sh  test_movement.sh
src/auv_msgs/: CMakeLists.txt
src/auv_msgs/msg/: DepthInfo.msg  MovementCommand.msg  NavigationCommand.msg  ObjectDetection.msg  ObjectDetectionArray.msg
src/auv_msgs/srv/: SetFlightMode.srv
src/control/: README.md  package.xml  setup.py
src/control/control/: api.py  autonomous_controller.py  centering.py  depth_controller.py  forward_hold_mission.py  heading_lock.py  heading_lock_node.py  motion.py  motion_node.py  pid.py  pose_source.py  rviz_visualizer.py  submerge.py
src/control/launch/: mission_stack.launch.py  move_forward_depth_hold.launch.py  submerge_hold.launch.py
src/control/rviz/: submerge_hold.rviz
src/imu/: README.md  package.xml  setup.py
src/imu/imu/: diagnostics_node.py  imu_math.py  marker_node.py  orientation_node.py
src/imu/launch/: imu_viz.launch.py
src/imu/rviz/: imu.rviz
src/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
src/localization/: package.xml  setup.py
src/localization/launch/: vslam_localization_launch.py
src/localization/localization/: depth_node.py  drift_correction_node.py  vslam_node.py  (+1 more)
src/log/: latest_build
src/mavlink_thruster_control/: package.xml  setup.cfg  setup.py
src/mission/: README.md
src/mission/src/: CMakeLists.txt  Makefile  command_adapter.cpp  main.cpp  main.cpp.old
src/pix_imu/: README.md  package.xml  setup.cfg  setup.py
src/pix_imu/launch/: pix_imu_viz.launch.py
src/pix_imu/pix_imu/: pixhawk_imu_bridge.py
src/prequalification/: README.md  package.xml  setup.cfg  setup.py
src/prequalification/config/: prequalification.yaml
src/prequalification/launch/: prequal_dry_test.launch.py  prequalification.launch.py
src/prequalification/prequalification/: prequal_dry_test_node.py  prequalification_node.py
src/robosub2026/: CMakeLists.txt  MANIPULATION_DRIVERS.md  MIGRATION.md  package.xml
src/robosub2026/bt_xml/: robosub2026_mission.xml
src/robosub2026/include/bt_mission/: mission_io.hpp  shrub_nodes.hpp
src/robosub2026/launch/: mission.launch.py  shrub.launch.py
src/robosub2026/src/: bt_executor.cpp  manipulation_nodes.cpp  mission_io.cpp  nav_nodes.cpp  perception_nodes.cpp  safety_nodes.cpp  task_logic_nodes.cpp
src/test/: package.xml
src/vision/: package.xml  setup.py
src/zed2i_vslam/: CMakeLists.txt  package.xml  robosub_tracking.launch.py  robosub_tracking.rviz  vslam_node.yaml  zed2i_robosub.yaml  zed2i_vslam_node.cpp
src/zed2i_vslam(2)/: COLCON_IGNORE
src/zed2i_vslam(2)/zed2i_vslam/: README.md  package.xml  setup.cfg  setup.py
src/zed2i_vslam(2)/zed2i_vslam/config/: vslam_params.yaml
src/zed2i_vslam(2)/zed2i_vslam/launch/: vslam.launch.py  vslam_jetson.launch.py
src/zed2i_vslam(2)/zed2i_vslam/rviz/: vslam.rviz
src/zed2i_vslam(2)/zed2i_vslam/zed2i_vslam/: vslam_node.py
src/zed2i_vslam/config/: vslam_node.yaml  zed2i_robosub.yaml
src/zed2i_vslam/launch/: robosub_tracking.launch.py
src/zed2i_vslam/rviz/: robosub_tracking.rviz
src/zed2i_vslam/src/: zed2i_vslam_node.cpp
tests/: test_depth_controller.py  test_e2e_submerge.py  test_gateway.py  test_gateway_services.py  test_heading_lock.py  test_heading_lock_node.py  test_imu_math.py  test_motion.py  test_motion_node.py  test_msg_compat.py  test_pid.py  test_pose_source.py  test_pressure.py  test_submerge.py  test_thruster_params.py
(+362 files in other folders)
