<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pix_imu</name>
  <version>0.0.0</version>
  <description>RViz visualization of RoboSub orientation from the Pixhawk (ArduSub) IMU over MAVLink. Bridges ATTITUDE/RAW_IMU to sensor_msgs/Imu and reuses the imu package's orientation/diagnostics/marker nodes.</description>
  <maintainer email="robosub@robosub.com">robosub</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>imu</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
