<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>prequalification</name>
  <version>0.0.0</version>
  <description>Scripted RoboSub 2026 prequalification run: submerge, transit the gate, loop the vertical marker, return through the gate, and resurface.</description>
  <maintainer email="robosub@robosub.com">robosub</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>auv_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
