cmake_minimum_required(VERSION 3.8)
project(zed2i_vslam)
if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic -O3)
endif()
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(diagnostic_msgs REQUIRED)
find_package(visualization_msgs REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(tf2_geometry_msgs REQUIRED)
set(DEPS rclcpp nav_msgs geometry_msgs sensor_msgs std_msgs
         diagnostic_msgs visualization_msgs tf2 tf2_ros tf2_geometry_msgs)
add_executable(zed2i_vslam_node src/zed2i_vslam_node.cpp)
ament_target_dependencies(zed2i_vslam_node ${DEPS})
target_compile_features(zed2i_vslam_node PUBLIC cxx_std_17)
install(TARGETS zed2i_vslam_node DESTINATION lib/${PROJECT_NAME})
install(DIRECTORY launch config rviz DESTINATION share/${PROJECT_NAME})
ament_package()
