<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zed2i_vslam</name>
  <version>1.0.0</version>
  <description>Optimized ZED2i positional tracking node for RoboSub</description>
  <maintainer email="team@robosub.org">RoboSub Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <exec_depend>zed_wrapper</exec_depend>
  <exec_depend>zed_description</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
